Added functionallity behind the star button, still not fully working